style(waybar): refine spacing, add background transparency, and fix color reloading

--- a/.config/waybar/colors-template.css
+++ b/.config/waybar/colors-template.css
@@ -4,7 +4,7 @@
 @define-color accent {{colors.primary.default.hex}};
 @define-color mauve {{colors.secondary.default.hex}};
 @define-color red {{colors.error.default.hex}};
-@define-color green {{colors.primary_container.default.hex}};
+@define-color green {{colors.on_primary_container.default.hex}};
 @define-color yellow {{colors.tertiary.default.hex}};
 @define-color surface0 {{colors.surface_container_low.default.hex}};
 @define-color surface1 {{colors.surface_container_high.default.hex}};
